Added user controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
       </li>
     </ul>
   </div>
+  <form class="form-inline user-button">
+    <%= link_to("User Login", "#", :onclick => "window.location.href = '/user/login'", class: "btn btn-primary", style: "margin-left:-10%") %>
+  </form>
   <form class="form-inline admin-button">
     <%= link_to("Admin Login", "#", :onclick => "window.location.href = '#{new_admin_user_session_path}'", class: "btn btn-primary") %>
   </form>
