--- a/app/views/user/profile.html.erb
+++ b/app/views/user/profile.html.erb
@@ -1,5 +1,5 @@
 <head>
-
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <style>
       .backsplash {
           height: 300px;
@@ -14,15 +14,43 @@
   <div class = "backsplash">
     
   </div>
-  <h2 style = "text-align:center; margin-top:-2.8%; color:white"> <%=@user.name%> <h2>
-  <div class = "container" style = "margin-top:3%">
-    <div class = "row">
-      <div class = "column">
-        <h3> <%=@user.name%>'s Points </h3>
+  <h2 style = "text-align:center; margin-top:-50px; color:white;"> <%=@user.name%> <h2>
+  <center>
+    <div class = "container" style = "margin-top:50px;">
+      <div class = "row">
+        <div class = "col">
+          <h3 style = "text-decoration:underline"> <%=@user.name%>'s Points </h3>
+          <h5>General Meeting Points: <%=@user.general_meeting_points %> </h5>
+          <h5>Mentorship Meeting Points: <%=@user.mentorship_meeting_points %> </h5>
+          <h5>Social Meeting Points: <%=@user.social_points %> </h5>
+          <h5>Total Meeting Points: <%=@user.total_points %> </h5>
+
+          
+        </div>
+        <div class = "col" style ="margin-left:%">
+          <h3 style = "text-decoration:underline"> Status: </h3>
+          
+          <h5 style = "text-decoration:underline"> Active Member Status: </h5>
+          <div class="progress">
+            <div class="progress-bar bg-success" role="progressbar" style="width: <%=@user.total_points*20%>%" aria-valuenow="<%=@user.total_points*20 %>" aria-valuemin="0" aria-valuemax="100">
+            <%=@user.total_points%>/5 Points</div>
+          </div>
+        </div>
       </div>
-      <div class = "column" style ="margin-left:10%">
-        <h3> <%=@user.name%>'s Points </h3>
+    </div>
+  
+
+  
+  <div class = "container" style = "margin-top:30px;">
+    <h3 style = "text-decoration:underline"> <%=@user.name%>'s Recent Events </h3>
+    <div class = "row">
+    
+      <div class = "col">
+        <% if (@user.events.length == 0) %>
+          <h5 > None! </h5>
+        <% end %>
       </div>
     </div>
   </div>
+  </center>
 </body>
