--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style>
+      .dropdown-menu {
+        margin-left:-100px
+      }
+      @media only screen and (max-width: 600px) {
+        .dropdown-menu {
+          margin-left:-40px
+        }
+      }   
+    </style>
   </head>
 
   <body>
@@ -35,7 +46,7 @@
     
   <% else %>
     <div class="dropdown">                 
-    <img src = "https://t4.ftcdn.net/jpg/03/46/93/61/360_F_346936114_RaxE6OQogebgAWTalE1myseY1Hbb5qPM.jpg" style = "width: 50px; height: 50px; float:right; margin-right:100px; border-radius: 10%;margin-top:10px;object-fit: cover;" class="dropdown-toggle link" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">                          
+    <img src = "https://lh3.googleusercontent.com/proxy/f7r4-F8BoQIPInCdiQD3Qz911VX3QURz0lic5VYInZIm5yToK6lJ-FVIqWoJjbN455_P35g1kLcGPWfwhyxSkk5ux692C1eNnX_QHCjSJ72B-XMpUYHVyAM" style = "width: 50px; height: 50px; float:right; margin-right:15%; border-radius: 10%;margin-top:10px;object-fit: cover; color:green" class="dropdown-toggle link" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">                          
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="/user_profile">View Profile</a>
         <form class="form-inline user-button" action ='/user/logout' method = 'POST'>
