--- a/app/views/user/profile.html.erb
+++ b/app/views/user/profile.html.erb
@@ -1,11 +1,60 @@
 <head>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <style>
-      .backsplash {
-          height: 300px;
-          background-image: linear-gradient(to top right, #00a8f3, rgb(10, 74, 117));
-          margin-top: 0%;
+    * {
+      box-sizing: border-box;
+    }
+    .backsplash {
+        height: 400px;
+        background-image: linear-gradient(to top right, #00a8f3, rgb(10, 74, 117));
+        margin-top: 0%;
+    }
+    .progress{
+      float:left; width:60%; margin-right:-1%; height:18%
+    }
+    @media only screen and (max-width: 600px) {
+      html {
+        font-size:9px
       }
+      .progress{
+        float:left; width:37%; margin-right:-1%; height:10%
+      }
+    }   
+
+    /* Small devices (portrait tablets and large phones, 600px and up) */
+    @media only screen and (min-width: 600px) {
+        html {
+          font-size:12px
+        }
+        .progress{
+          float:left; width:30%; margin-right:-1%; height:18%
+        }
+    }
+
+    /* Medium devices (landscape tablets, 768px and up) */
+    @media only screen and (min-width: 768px) {
+      html {
+          font-size:16px
+      }
+      .progress{
+        float:left; width:50%; margin-right:-1%; height:18%
+      }
+    }
+
+    /* Large devices (laptops/desktops, 992px and up) */
+    @media only screen and (min-width: 992px) {
+      html {
+          font-size:16px
+      }
+      .progress{
+        float:left; width:60%; margin-right:-1%; height:18%
+      }
+    }
+
+    /* Extra large devices (large laptops and desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+
+    }
   </style>
 
 </head>
@@ -14,7 +63,7 @@
   <div class = "backsplash">
     
   </div>
-  <h2 style = "text-align:center; margin-top:-50px; color:white;"> <%=@user.name%> <h2>
+  <p style = "text-align:center; margin-top:-70px; color:white;font-size:300%"> <%=@user.name%> <p>
   <center>
     <div class = "container" style = "margin-top:50px;">
       <div class = "row">
@@ -27,21 +76,22 @@
 
           
         </div>
-        <div class = "col" style ="margin-left:%">
-          <h3 style = "text-decoration:underline"> Status: </h3>
-          
-          <h5 style = "text-decoration:underline"> Active Member Status: </h5>
-          <div class="progress">
+        <div class = "col" style ="margin-left:10%">
+          <h3 style = "text-decoration:underline"> Status: <% if @user.total_points >= 5 %>Active Member<%else%>Member<%end%></h3>
+
+          <p style = "float:left; margin-right:2%">Member</p>
+          <div class="progress" style = "">
             <div class="progress-bar bg-success" role="progressbar" style="width: <%=@user.total_points*20%>%" aria-valuenow="<%=@user.total_points*20 %>" aria-valuemin="0" aria-valuemax="100">
             <%=@user.total_points%>/5 Points</div>
           </div>
+          <p style = "margin-left:-10%">Active Member</p>
         </div>
       </div>
     </div>
   
 
   
-  <div class = "container" style = "margin-top:30px;">
+  <div class = "container" style = "margin-top:50px;">
     <h3 style = "text-decoration:underline"> <%=@user.name%>'s Recent Events </h3>
     <div class = "row">
     
