--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -5,9 +5,8 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 
   <title>Login | Bmes Participation Tracker</title>
+      <%= stylesheet_link_tag "user", media: "all" %>
 
-      <link rel="stylesheet" media="screen" href="/assets/active_admin.debug-004d4ef7ebb42b9d35414ce40576bd322916d3822653d232ae6f9527242a3f16.css" />
-      <link rel="stylesheet" media="print" href="/assets/active_admin/print.debug-7b997d8726050d67e1764d407ec6d2099045890c78e08c74e110b2ceafec44bd.css" />
       <script src="/assets/active_admin.debug-71b4ae09d64150f7bc8898680ba8123eed8f02c6fb5414c7080b10fee2bad198.js"></script>
 
   
