--- a/app/views/user/profile.html.erb
+++ b/app/views/user/profile.html.erb
@@ -19,7 +19,6 @@
         float:left; width:37%; margin-right:-1%; height:15%
       }
     }   
-
     /* Small devices (portrait tablets and large phones, 600px and up) */
     @media only screen and (min-width: 600px) {
         html {
@@ -29,7 +28,6 @@
           float:left; width:30%; margin-right:-1%; height:18%
         }
     }
-
     /* Medium devices (landscape tablets, 768px and up) */
     @media only screen and (min-width: 768px) {
       html {
@@ -39,7 +37,6 @@
         float:left; width:50%; margin-right:-1%; height:18%
       }
     }
-
     /* Large devices (laptops/desktops, 992px and up) */
     @media only screen and (min-width: 992px) {
       html {
@@ -49,19 +46,11 @@
         float:left; width:60%; margin-right:-1%; height:18%
       }
     }
-
-    /* Extra large devices (large laptops and desktops, 1200px and up) */
-    @media only screen and (min-width: 1200px) {
-
-    }
   </style>
-
 </head>
 
 <body>
-  <div class = "backsplash">
-    
-  </div>
+  <div class = "backsplash"></div>
   <p style = "text-align:center; margin-top:-70px; color:white;font-size:300%"> <%=@user.name%> <p>
   <center>
     <div class = "container" style = "margin-top:50px;">
@@ -72,8 +61,6 @@
           <h5>Mentorship Meeting Points: <%=@user.mentorship_meeting_points %> </h5>
           <h5>Social Meeting Points: <%=@user.social_points %> </h5>
           <h5>Total Meeting Points: <%=@user.total_points %> </h5>
-
-          
         </div>
         <div class = "col" style ="margin-left:10%">
           <h3 style = "text-decoration:underline"> Status: <% if @user.total_points >= 5 %>Active Member<%else%>Member<%end%></h3>
@@ -87,19 +74,15 @@
         </div>
       </div>
     </div>
-  
-
-  
-  <div class = "container" style = "margin-top:50px;">
-    <h3 style = "text-decoration:underline"> <%=@user.name%>'s Recent Events </h3>
-    <div class = "row">
-    
-      <div class = "col">
-        <% if (@user.events.length == 0) %>
-          <h5 > None! </h5>
-        <% end %>
+    <div class = "container" style = "margin-top:50px;">
+      <h3 style = "text-decoration:underline"> <%=@user.name%>'s Recent Events </h3>
+      <div class = "row">
+        <div class = "col">
+          <% if (@user.events.length == 0) %>
+            <h5 > None! </h5>
+          <% end %>
+        </div>
       </div>
     </div>
-  </div>
   </center>
 </body>
