--- a/app/views/user/settings.html.erb
+++ b/app/views/user/settings.html.erb
@@ -3,6 +3,29 @@
     * {
       box-sizing: border-box;
     }
+    @media only screen and (max-width: 600px) {
+      html {
+        font-size:9px
+      }
+    }   
+    /* Small devices (portrait tablets and large phones, 600px and up) */
+    @media only screen and (min-width: 600px) {
+        html {
+          font-size:12px
+        }
+    }
+    /* Medium devices (landscape tablets, 768px and up) */
+    @media only screen and (min-width: 768px) {
+      html {
+          font-size:16px
+      }
+    }
+    /* Large devices (laptops/desktops, 992px and up) */
+    @media only screen and (min-width: 992px) {
+      html {
+          font-size:16px
+      }
+    }
   </style>
 </head>
 
