--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,7 +13,22 @@
   
 
 <br>
-
+  <% Date.beginning_of_week = :sunday %>
+  <%= month_calendar(events: @events) do |date, events| %>
+    <span class="date-str"><%= date.day %></span>
+      <% events.each do |event| %>
+        <% if event.starttime.to_date == date %>
+          <div style="background-color:#117099;color:white;border:2px solid black;text-align:center;font-size:14px;">
+            <%= event.title %>
+            <%= event.starttime.strftime("%I:%M %p") %>
+            <br ></br>
+            <%= link_to("Details", event_path(event), :class => 'action show', class: "a-primary")%>
+            <%= link_to("Check-in", {:controller => "participations", :action => "new", :event_id => event.id}, class: "a-primary") %>
+          </div>
+          <br>
+        <% end %>
+      <% end %>
+  <% end %>
 <% @events.in_groups_of(3,false) do |group| %>
 <div class="row">
   <% group.each do |event| %>
