--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,6 +104,7 @@ html, body {
     color: white;
     border:1px solid black;
     font-size: 16px;
+    font-size: 0.875rem;
     padding-top: 0%;
     border-radius: 2px;
 }
