--- a/app/views/participations/new.html.erb
+++ b/app/views/participations/new.html.erb
@@ -22,20 +22,22 @@
                 <%= text_field_tag(:event_pass, nil, required: true, class: "form-control") %>
               </div>
             </div>
-            <div class="form-row">
-              <div class="form-group col-md-4">
-                <label for="inputCity">First Name</label>
-                <%= f.text_field(:first_name, required: true, class: "form-control") %>
+            <% if(!session[:user_id]) %><!-- Should only allow to input name and UIN if the user does not have an account -->
+              <div class="form-row">
+                <div class="form-group col-md-4">
+                  <label for="inputCity">First Name</label>
+                  <%= f.text_field(:first_name, required: true, class: "form-control") %>
+                </div>
+                <div class="form-group col-md-4">
+                  <label for="inputState">Last Name</label>
+                  <%= f.text_field(:last_name, required: true, class: "form-control") %>
+                </div>
+                <div class="form-group col-md-4">
+                  <label for="inputZip">UIN</label>
+                  <%= f.number_field(:uin, class: "form-control") %>
+                </div>
               </div>
-              <div class="form-group col-md-4">
-                <label for="inputState">Last Name</label>
-                <%= f.text_field(:last_name, required: true, class: "form-control") %>
-              </div>
-              <div class="form-group col-md-4">
-                <label for="inputZip">UIN</label>
-                <%= f.number_field(:uin, class: "form-control") %>
-              </div>
-            </div>
+            <% end %>
             <%= link_to("Back to List", events_path, :class => 'back-link', class: "btn btn-primary float-right") %>
             <%= f.submit("Sign In", class: "btn btn-inverted float-left") %>
           <% end %>
