Finished successful event sign in

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -25,9 +25,12 @@
 
   <ul class="list-group list-group-flush">
   <h3>Attendees: </h3>
-  <% @count.each do |c| %>
-    <li class="list-group-item"><%= c.first_name %> <%= c.last_name %> <%= c.email %></li>
-    <% end %>
+  <% @event.users.each do |c| %>
+    <li class="list-group-item"><%= c.name %></li>
+  <% end %>
+  <% @event.guests.each do |c| %>
+    <li class="list-group-item"><%= c %></li>
+  <% end %>
   </ul>
   <br>
   <%= link_to("Back to List", events_path, :class => 'back-link', class: "btn btn-primary") %>
