--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -29,7 +29,7 @@
           <p class="card-text">End Time: <%= event.endtime.strftime("%I %M %p %h-%d-%Y") %></p>
         <% end %>
         <%= link_to("Details", event_path(event), :class => 'action show', class: "btn btn-primary")%>
-        <%= link_to("Event Check-in", {:controller => "participations", :action => "new", :event_id => event.id}, class: "btn btn-primary") %>
+        <%= link_to("Event Check-in", {:controller => "events", :action => "new", :event_id => event.id}, class: "btn btn-primary") %>
       </div>
     </div>
   </div>
