--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -74,16 +74,15 @@
             <%= event.starttime.strftime("%I:%M %p") %>
             <br ></br>
             <%= link_to("Details", event_path(event), :class => 'action show', class: "a-primary")%>
-            <%= link_to("Check-in", {:controller => "participations", :action => "new", :event_id => event.id}, class: "a-primary") %>
+            <%= link_to("Event Check-in", {:controller => "events", :action => "new", :event_id => event.id}, class: "a-primary") %>
           </div>
           <br>
         <% end %>
-        <%= link_to("Details", event_path(event), :class => 'action show', class: "btn btn-primary")%>
-        <%= link_to("Event Check-in", {:controller => "events", :action => "new", :event_id => event.id}, class: "btn btn-primary") %>
       </div>
     </div>
   </div>
   <% end %>
+<%end%>
 
 
 </div>
