--- a/app/views/user/profile.html.erb
+++ b/app/views/user/profile.html.erb
@@ -13,7 +13,7 @@
     }
     @media only screen and (max-width: 600px) {
       html {
-        font-size:9px
+        font-size:8px
       }
       .progress{
         float:left; width:37%; margin-right:-1%; height:15%
@@ -83,23 +83,26 @@
       </div>
     </div>
     
-    <div class = "container" style = "margin-top:50px;">
+    <div class = "container" style = "margin-top:50px; ">
       <h3 style = "text-decoration:underline;"> <%=@user.name%>'s Recent Events </h3>
-      <div class = "row">
-        <div class = "col">
-          <% if (@events.length == 0) %>
-            <h5 > None! </h5>
-          <% else %>
-            <% @events.each do |event| %>
-              <div class="card" style = "width: 40%">
-                <div class="card-body" >
-                  <h2 style = "text-decoration:underline"><%= event.title %></h2> <br>
-                  <h6>Date: <%= event.starttime %> </h6> <br>
-                  <h6>Event Type: <%= event.eventtype %> </h6> <br>
+      <div style="overflow-y: auto; height:400px; width:80%; overflow-x: hidden; margin-top:4%">
+        <div class = "row">
+          <div class = "col" style = "height:10px">
+            <% if (@events.length == 0) %>
+              <h5 > None! </h5>
+            <% else %>
+              <% @events.each do |event| %>
+                <div class="card" style = "width: 40%">
+                  <div class="card-body" >
+                    <h2 style = "text-decoration:underline"><%= event.title %></h2> <br>
+                    <h6>Date: <%= event.starttime %> </h6> <br>
+                    <h6>Event Type: <%= event.eventtype %> </h6> <br>
+                  </div>
                 </div>
-              </div>
+                <br>
+              <% end %>
             <% end %>
-          <% end %>
+          </div>
         </div>
       </div>
     </div>
