--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,4 @@
+<% @now = DateTime.now.change(:offset => '+0000') %>
 
 <head>
 <style>
@@ -74,11 +75,7 @@
             <%= event.starttime.strftime("%I:%M %p") %>
             <br ></br>
             <%= link_to("Details", event_path(event), :class => 'action show', class: "a-primary")%> 
-            <%# <%= ((event.starttime - 10.minutes) < DateTime.now < event.endtime).inspect %>
-            <%# <%= DateTime.now.inspect %>
-            <%# <%= Time.now.inspect %>
-            <%# Time.now.between?((event.starttime.to_time - 10.minutes), event.endtime.to_time) %>
-            <% if DateTime.now.between?((event.starttime.to_time - 10.minutes), event.endtime.to_time) %>
+            <% if @now.between?((event.starttime.to_time - 10.minutes), event.endtime.to_time) %>
               <%= link_to("Event Check-in", {:controller => "events", :action => "new", :event_id => event.id}, class: "a-primary") %>
             <% end %>
           </div>
